--- a/core/src/main/resources/templates/submit.html
+++ b/core/src/main/resources/templates/submit.html
@@ -18,6 +18,7 @@
   <script src="/lib/moment-with-locales.min.js"></script>
   <script>
     moment().format();
+    moment.locale('zh-cn');
   </script>
   <div th:include="template :: header"></div>
 
@@ -54,7 +55,7 @@
             <a>{{item.userId}}</a>
           </td>
           <td>
-            <a>{{item.problemId}}</a>
+            <a :href="'/problem/'+item.problemId">{{item.problemId}}</a>
           </td>
           <td>
             <button v-if="item.judged===-1" class="ui compact basic loading button">正在判题</button>
@@ -68,7 +69,7 @@
             <button v-if="item.judged===7" class="ui compact yellow button">编译错误</button>
             <button v-if="item.judged===8" class="ui compact yellow button">系统错误</button>
           </td>
-          <td>{{ item.memoryUsed/1000 }}M</td>
+          <td>{{ (item.memoryUsed/1000).toFixed(2) }}M</td>
           <td>{{ item.timeUsed }}ms</td>
           <td>{{ item.lang}} </td>
           <td>{{ item.length }}b</td>
@@ -125,9 +126,11 @@
       var vm = new Vue({
         el: '#app',
         data: ld,
-        methods:{
-          fmt: function(time){
-            return moment(new Date(time)).toNow();
+        methods: {
+          fmt: function (time) {
+            var date = new Date();
+            date.setTime(time);
+            return moment(date.toISOString()).fromNow();
           }
         }
       })
